delete all and buttons color

--- a/src/sass/App.css
+++ b/src/sass/App.css
@@ -300,7 +300,7 @@ button i {
 
 button:hover {
   color: white !important;
-  background: var(--silverGlass) !important;
+  background: var(--secondary) !important;
 }
 
 div[role="presentation"] {
