--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -241,7 +241,7 @@ button {
   }
   &:hover {
     color: white !important;
-    background: var(--silverGlass) !important;
+    background: var(--secondary) !important;
   }
 }
 
