--- a/src/components/Row/styles/row.css
+++ b/src/components/Row/styles/row.css
@@ -12,7 +12,7 @@
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
-  padding-right: 8em;
+  padding-right: 1.2em;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -29,8 +29,8 @@
 
 .row h2 {
   text-align: left;
-  font-weight: 500;
-  font-size: 1.3em;
+  font-weight: 700;
+  font-size: 3em;
   height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -38,7 +38,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  grid-gap: 1em;
+  grid-gap: 20px;
 }
 
 .row h2 .index {
@@ -47,7 +47,7 @@
   color: var(--silver);
   background: var(--mainGlass);
   border-radius: 100px;
-  font-size: 0.7em !important;
+  font-size: 0.975em !important;
   min-height: 14px;
   min-width: 14px;
   display: -webkit-box !important;
@@ -67,6 +67,7 @@
   top: 0;
   bottom: 0;
   position: relative;
+  font-size: 0.85em !important;
 }
 
 .row:last-child {
