--- a/src/components/Row/styles/row.scss
+++ b/src/components/Row/styles/row.scss
@@ -6,7 +6,7 @@
     display: flex;
     align-items: center;
     width: 100%;
-    padding-right: 8em;
+    padding-right: 1.2em;
     justify-content: space-between;
     button {
       text-transform: none !important;
@@ -19,19 +19,19 @@
   }
   h2 {
     text-align: left;
-    font-weight: 500;
-    font-size: 1.3em;
+    font-weight: 700;
+    font-size: 3em;
     height: 100%;
     display: flex;
     align-items: center;
-    grid-gap: 1em;
+    grid-gap: 20px;
     .index {
       font-weight: 700;
       font-family: "montserrat" !important;
       color: var(--silver);
       background: var(--mainGlass);
       border-radius: 100px;
-      font-size: 0.7em !important;
+      font-size: 0.975em !important;
       min-height: 14px;
       min-width: 14px;
       display: flex !important;
@@ -42,6 +42,7 @@
         top: 0;
         bottom: 0;
         position: relative;
+        font-size: 0.85em !important;
       }
     }
   }
