--- a/src/components/Header/styles/header.scss
+++ b/src/components/Header/styles/header.scss
@@ -30,7 +30,11 @@ header {
         display: flex;
         list-style: none;
         align-items: center;
+        max-height: 35px !important;
         transition: var(--transition);
+        li {
+          max-height: 35px !important;
+        }
         li:not(.right) {
           margin-left: 20px;
           text-decoration: none;
