--- a/src/components/Footer/styles/footer.css
+++ b/src/components/Footer/styles/footer.css
@@ -9,7 +9,8 @@
   background: var(--mainGlass);
   color: var(--silver) !important;
   font-family: "Montserrat" !important;
-  height: 40px;
+  height: 35px;
+  max-height: 35px;
   -webkit-backdrop-filter: blur(8px);
   backdrop-filter: blur(8px);
   display: -webkit-box;
