--- a/src/components/Footer/styles/footer.scss
+++ b/src/components/Footer/styles/footer.scss
@@ -11,7 +11,8 @@
   background: var(--mainGlass);
   color: var(--silver) !important;
   font-family: "Montserrat" !important;
-  height: 40px;
+  height: 35px;
+  max-height: 35px;
   -webkit-backdrop-filter: blur(8px);
   backdrop-filter: blur(8px);
   display: flex;
