--- a/src/components/Header/styles/header.css
+++ b/src/components/Header/styles/header.css
@@ -58,8 +58,13 @@ header .inner .navigation ul {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  max-height: 35px !important;
   -webkit-transition: var(--transition);
   transition: var(--transition);
+}
+
+header .inner .navigation ul li {
+  max-height: 35px !important;
 }
 
 header .inner .navigation ul li:not(.right) {
