--- a/src/components/Movie/styles/movie.scss
+++ b/src/components/Movie/styles/movie.scss
@@ -1,11 +1,28 @@
+@mixin movieSize {
+  max-height: var(--posterH) !important;
+  max-width: var(--posterW) !important;
+}
+
 .movie {
+  @include movieSize;
   cursor: pointer;
   position: relative;
   object-fit: cover !important;
-  max-height: 250px !important;
-  max-width: 165px !important;
+  border-radius: 4px !important;
   color: var(--silver);
   transition: var(--transition) !important;
+  span {
+    width: 100%;
+    height: 100%;
+    border-radius: 4px !important;
+    object-fit: contain !important;
+    @include movieSize;
+    transition: var(--transition) !important;
+    .moviePoster {
+      transition: var(--transition) !important;
+      @include movieSize;
+    }
+  }
   .overlay {
     height: 20%;
     opacity: 1;
@@ -16,9 +33,9 @@
     bottom: 0;
     left: 0;
     margin: 0 auto;
-    object-fit: cover !important;
-    max-height: 250px !important;
-    max-width: 165px !important;
+    border-radius: 0px !important;
+    object-fit: contain !important;
+    @include movieSize;
     width: 100% !important;
     display: flex;
     flex-direction: column;
@@ -77,7 +94,6 @@
       animation: fadeIn var(--transition);
     }
   }
-
   .buttons {
     opacity: 0;
     padding: 0.75em 1em !important;
@@ -109,15 +125,22 @@
       }
     }
   }
+
   // Hover Movie
   &:hover {
     color: white;
     transform: scale(1.08);
+    .moviePoster {
+      transform: scale(0.92) !important;
+    }
     .overlay {
       opacity: 1 !important;
       padding: 1.5em !important;
-      object-fit: cover !important;
-      height: 100% !important;
+      object-fit: contain !important;
+      border-radius: 4px !important;
+      padding: 1em 1.5em 0em !important;
+      height: var(--posterH) !important;
+      @include movieSize;
       .titleData {
         transform: scale(0.92) !important;
         clip-path: none !important;
@@ -146,8 +169,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  max-height: 250px !important;
-  max-width: 165px !important;
+  @include movieSize;
   width: 100%;
   color: white;
   transition: var(--transition);
