--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -5,11 +5,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap");
 
 :root {
-  --piratechs: #2b4261;
-  --main: #ff1c0b;
   --bg: #1f1f1f;
+  --posterH: 250px;
+  --posterW: 165px;
+  --main: #ff1c0b;
   --silver: #f2f2f2;
   --secondary: #3c3c3c;
+  --piratechs: #2b4261;
   --mainGlass: rgba(255, 28, 11, 0.75);
   --blackGlass: rgba(0, 0, 0, 0.75);
   --silverGlass: rgba(0, 0, 0, 0.35);
@@ -62,12 +64,6 @@ iframe {
   transition: var(--transition) !important;
 }
 
-.rowTotal {
-  font-size: 1em;
-  padding-right: 1.2em;
-  font-weight: 500;
-}
-
 body {
   margin: 0;
   font-family: "Montserrat" !important;
@@ -88,7 +84,7 @@ main {
   animation: fadeIn 1000ms ease-in-out;
   margin-top: 0em;
   z-index: 15;
-  min-height: 96vh;
+  min-height: 96.9vh;
   animation: fadeIn 1000ms ease-in-out;
   width: 100%;
   padding: 5em 0;
@@ -244,6 +240,19 @@ button {
   }
 }
 
+.githubButton {
+  button {
+    i {
+      color: var(--silver);
+    }
+    &:hover {
+      i {
+        color: white !important;
+      }
+    }
+  }
+}
+
 // Modals
 div[role="presentation"] {
   display: flex;
@@ -253,6 +262,8 @@ div[role="presentation"] {
   font-size: 2em !important;
   color: white;
   transition: var(--transition);
+  width: 85%;
+  margin: 0 auto;
   button {
     font-family: "Montserrat";
     font-size: 2em !important;
@@ -394,6 +405,9 @@ code {
 }
 
 .rowTotal {
+  font-size: 1em;
+  padding-right: 3em;
+  font-weight: 500;
   animation: fadeIn var(--transition);
   transition: var(--transition);
 }
@@ -409,3 +423,21 @@ code {
     // display: none !important;
   }
 }
+
+.customList {
+  .titleRow {
+    margin-bottom: -2em !important;
+  }
+}
+
+.content {
+  padding: 0 !important;
+  .row h2 .rowTotal {
+    padding-right: 1em !important;
+  }
+}
+
+// .items {
+//   .homePageMain {
+//   }
+// }
