--- a/src/components/Auth/styles/auth.scss
+++ b/src/components/Auth/styles/auth.scss
@@ -57,6 +57,36 @@
       }
     }
   }
+  @media (max-width: 992px) {
+    .getStartedForm {
+      flex-direction: column;
+      grid-gap: 1em;
+      button,
+      input {
+        border-radius: 4px !important;
+        width: 100% !important;
+      }
+    }
+  }
+}
+
+@media (max-width: 1265px) {
+  .backButton {
+    display: none !important;
+  }
+}
+
+@media (max-width: 992px) {
+  .react-Slidy {
+    width: 85% !important;
+  }
+  .authCont {
+    header {
+      li:not(.githubButton) {
+        display: none;
+      }
+    }
+  }
 }
 
 .authHeaderRightSide {
@@ -98,7 +128,7 @@
 }
 
 .react-Slidy {
-  width: 100% !important;
+  width: 100%;
   min-height: 355px !important;
   height: 100%;
   div {
@@ -133,13 +163,14 @@
 
 .react-Slidy-arrow {
   margin: auto -3em !important;
+  display: none;
 }
 
 .registration {
   display: flex;
   position: relative;
   border-radius: 4px;
-  padding-bottom: 3em;
+  padding: 1em 1em 3em 1em;
   flex-direction: column;
   width: 60% !important;
   margin: 0 auto !important;
