--- a/src/components/Row/styles/row.scss
+++ b/src/components/Row/styles/row.scss
@@ -53,7 +53,9 @@
     grid-gap: 20px;
     justify-content: space-between;
     .rowTotal {
-      padding-right: 2.3em !important;
+      @media (min-width: 768px) {
+        padding-right: 2.3em !important;
+      }
     }
     .index {
       font-weight: 700;
@@ -76,9 +78,6 @@
       }
     }
   }
-  &:last-child {
-    margin-bottom: 3em;
-  }
   .rowTitle {
     text-align: left;
     font-weight: 500;
@@ -99,6 +98,38 @@
     }
     span {
       width: 100%;
+    }
+  }
+  @media (max-width: 1366px) {
+    padding: 1em 1em 1em 4em !important;
+  }
+  @media (max-width: 768px) {
+    padding: 1em 1em 1em 2em !important;
+    .titleRow,
+    .rowTotal {
+      padding-right: 1em !important;
+    }
+    h2 {
+      font-size: 2.3em !important;
+      padding: 0.5em 0;
+      grid-gap: 5px;
+    }
+  }
+}
+
+.topicRow {
+  &:last-child {
+    margin-bottom: 3em;
+  }
+}
+
+@media (max-width: 768px) {
+  .customList .titleRow {
+    margin-bottom: -1.5em !important;
+  }
+  .topicRow {
+    .rowTitle {
+      font-size: 1.2em !important;
     }
   }
 }
