--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -120,15 +120,15 @@ main:not(.content) {
     background-size: cover !important;
     background-repeat: repeat-y !important;
     transition: var(--transition);
-    @media (max-width: 992px) {
-      width: 99%;
-      .initial {
-        text-align: center !important;
-        h2:not(.movieName) {
-          display: none;
-        }
-      }
-    }
+    // @media (max-width: 992px) {
+    //   width: 99%;
+    //   .initial {
+    //     text-align: center !important;
+    //     h2:not(.movieName) {
+    //       display: none;
+    //     }
+    //   }
+    // }
     .initial {
       text-align: left;
       padding: 1em 0em 1em 0em;
@@ -230,6 +230,10 @@ button {
   text-transform: uppercase !important;
   background: var(--silver) !important;
   transition: var(--transition);
+  .buttonText {
+    max-height: 30px !important;
+    overflow: hidden !important;
+  }
   i {
     font-size: 14px !important;
     transition: var(--transition) !important;
@@ -256,8 +260,9 @@ button {
 // Modals
 div[role="presentation"] {
   display: flex;
-  justify-content: center;
   align-items: center;
+  flex-direction: column;
+  justify-content: center;
   font-family: "Montserrat";
   font-size: 2em !important;
   color: white;
@@ -436,8 +441,3 @@ code {
     padding-right: 1em !important;
   }
 }
-
-// .items {
-//   .homePageMain {
-//   }
-// }
