--- a/src/components/Auth/styles/auth.css
+++ b/src/components/Auth/styles/auth.css
@@ -133,6 +133,16 @@
   transition: var(--transition);
 }
 
+@media (max-width: 992px) {
+  .authHeaderRightSide .authButton {
+    font-weight: 800 !important;
+    font-size: 0.65em !important;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 .authHeaderRightSide .authButton:hover {
   color: var(--silver) !important;
   background: var(--secondary) !important;
@@ -213,6 +223,12 @@
   -webkit-backdrop-filter: blur(5px) !important;
           backdrop-filter: blur(5px) !important;
   background: var(--blackGlass);
+}
+
+@media (max-width: 992px) {
+  .registration {
+    width: 100% !important;
+  }
 }
 
 .registration .backButton {
